[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokeniuse"
version = "0.1.0"
description = "tokeniuse — terminal dashboard to monitor AI coding assistant usage limits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0,<2.0",
    "rich>=13.0",
    "aiohttp>=3.9,<4.0",
]

[project.scripts]
tokeniuse = "tokeniuse.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tokeniuse"]
